update gitignore and notebook

--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,7 @@ ipython_config.py
 .pdm-build/
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+__pypackages__/ 
 
 # Celery stuff
 celerybeat-schedule
@@ -172,3 +172,6 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Ignore large dataset files
+*.zip
